--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hello, world!</title>
+    <title>Testio.</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<div id="app-root">
+</div>
 </body>
 </html>
