auth with github, then with local api

--- a/ui/src/html/login.html
+++ b/ui/src/html/login.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row justify-content-md-center">
         <div class="col col-xl-4 col-lg-5 col-md-6 text-center">
-            <img class="mb-6" src="../assets/img/logo.white.png" alt="">
+            <img class="mb-6" src="../assets/img/logo.white.png" alt=""/>
             <button class="btn btn-lg btn-block btn-primary">Login With GitHub</button>
         </div>
     </div>
