--- a/ui/src/html/issue.html
+++ b/ui/src/html/issue.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <a href="#" class="back">Back to Issue</a>
+                <a href="#" class="back">Back to Issues</a>
 
                 <ul class="issue-content cards">
                     <li class="card">
